--- a/src/components/ProfileStyle.css
+++ b/src/components/ProfileStyle.css
@@ -98,6 +98,8 @@ h1 {
     }
 
     .card {
+        
+        /* position: static; */
         width: 100%;
         background-color: green;
         padding: 70px 50px 0px 50px;
@@ -105,5 +107,14 @@ h1 {
         margin: 10px;
         border-radius: 10px;
 
+    
+    }
+
+    .profile-img {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin: auto;
     }
 }
